2008-01-21  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	When playback finishes, reset the UI (#413005, thanks Bill O'Shea)
	
2008-01-21  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Small re-organisation.

2008-01-21  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Remove more redundant logic (#509186, thanks Bill O'Shea)

2008-01-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* libjuicer/sj-structures.h:
	* libjuicer/sj-extractor.c:
	* src/sj-extracting.c:
	* src/sj-main.c:
	Add a Disc Number field (#136514, thanks Matthew Martin).

2008-01-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Add Audio CD content/* type (#510322, thanks Matthias Clasen).

2008-01-18  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c:
	Update (C) dates.

2008-01-18  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Determine the maximum read speed from the element instead of
	assuming G_MAXINT, because the libcdio src has a range of 0-100.
	This fixes slow rips when using libcdio.

2008-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Code refactoring, thanks Bill O'Shea.

2008-01-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.2.

2008-01-13  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/figures/startup.png:
	* help/sound-juicer/C/figures/prefs.c:
	Update screenshots to reflect the latest source.

2008-01-13  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Updated the documentation.  Thanks to Andreas Freund, for the
	Google Highly Open Participation contest.

2008-01-11  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Check that filenames are not too long (#172781, thanks Ed Catmur).

2008-01-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.[ch]:
	* src/sj-extracting.c:
	Add a Year entry to the main window (#325264, thanks Andrzej Polatyński)
