@@ -1,5 +1,11 @@
 2008-01-21  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Add filename fields for disc and track number (#510441, thanks
+	Matthew Martin).
+
+2008-01-21  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-play.c:
 	When playback finishes, reset the UI (#413005, thanks Bill O'Shea)
 	
